[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/MainMenu.png" type="Texture" id=2]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 320, 150 )
texture = ExtResource( 2 )

[node name="PVPButton" type="Button" parent="."]
anchor_right = 1.0
margin_left = 260.0
margin_top = 124.0
margin_right = 400.0
margin_bottom = 154.0
text = "Player vs. Player"

[node name="PVAButton" type="Button" parent="."]
anchor_right = 1.0
margin_left = 260.0
margin_top = 169.0
margin_right = 400.0
margin_bottom = 199.0
text = "Player vs. Ai"

[node name="Exit" type="Button" parent="."]
anchor_right = 1.0
margin_left = 260.0
margin_top = 210.0
margin_right = 400.0
margin_bottom = 240.0
text = "Exit Game"

[node name="KubreWebsiteLink" type="LinkButton" parent="."]
margin_left = 550.0
margin_top = 270.0
margin_right = 640.0
margin_bottom = 300.0

[node name="GodotWebsiteLink" type="LinkButton" parent="."]
margin_top = 260.0
margin_right = 150.0
margin_bottom = 300.0

[connection signal="pressed" from="PVPButton" to="." method="_on_PVPButton_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="KubreWebsiteLink" to="." method="_on_KubreWebsiteLink_pressed"]
[connection signal="pressed" from="GodotWebsiteLink" to="." method="_on_GodotWebsiteLink_pressed"]
